fixed waypoint text not showing up when in a score zone

--- a/src/Maze/Maze.css
+++ b/src/Maze/Maze.css
@@ -8,11 +8,17 @@
     vertical-align: middle;
     line-height: 30px;
     text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .tile-pulse {
-    width: 100%;
-    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
     animation: pulse 4s infinite ease-in-out;
 }
 
